--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -360,7 +360,7 @@ DOI={10.1051/0004-6361:200809790},
 number={2},
 journal={Astronomy and Astrophysics},
 publisher={EDP Sciences},
-author={Emel’yanov, N. V. and Arlot, J.-E.},
+author={Emelyanov, N. V. and Arlot, J.-E.},
 year={2008},
 month={Aug},
 pages={759–765}
