--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -24,7 +24,7 @@
 \usepackage{subfigure}
 \usepackage{epstopdf}
 \usepackage{color}
-\usepackage[breaklinks=true, draft]{hyperref}  % draft because there is an error = 'pdfTeX error (ext4): \pdfendlink ended up in different nesting level than \pdfstartlink'.
+\usepackage[breaklinks=true]{hyperref}  % draft because there is an error = 'pdfTeX error (ext4): \pdfendlink ended up in different nesting level than \pdfstartlink'.
 \usepackage{arydshln} % creates horizontal dashed lines in tables
 
 
@@ -44,10 +44,10 @@ B. E. Morgado$^{1,2}$
 F. Braga-Ribas$^{2,6}$
 \\
 $^{1}$Observat\'orio do Valongo/UFRJ, Ladeira Pedro Ant\^onio 43,
-CEP 20.080-090 Rio de Janeiro - RJ, Brazil\\
+CEP 20.080-090 Rio de Janeiro - RJ, Brazil\\,
 $^{2}$Observat\'orio Nacional/MCTI, R. General Jos\'e Cristino 77, CEP 20921-400 Rio de Janeiro - RJ, Brazil\\
 $^{3}$Observatoire de Paris/SYRTE, 77 Avenue Denfert Rochereau 75014 Paris, France\\
-$^{4}$Institut de m\'ecanique c\'eleste et de calcul des \'eph\'em\'erides - Observatoire de Paris, UMR 8028 du CNRS, 77 Av. Denfert-Rochereau,\\ 75014 Paris, France\\
+$^{4}$IMCCE, Observatoire de Paris, PSL Research University, CNRS, Sorbonne Universités, UPMC Univ Paris 06, Univ. Lille, 77 Av. Denfert-Rochereau, 75014 Paris, France\\
 $^{5}$Laborat\'orio Interinstitucional de e-Astronomia - LIneA, Rua Gal. Jos\'e Cristino 77, Rio de Janeiro, RJ 20921-400, Brazil\\
 $^{6}$Federal University of Technology - Paran\'a (UTFPR / DAFIS), Rua Sete de Setembro, 3165, CEP 80230-901, Curitiba, PR, Brazil\\
 $^\dag$Affiliated researcher at Observatoire de Paris/IMCCE, 77 Avenue Denfert Rochereau 75014 Paris, France
@@ -446,11 +446,12 @@ The release of the GAIA catalogue should have a positive impact on both the astr
 
 ARG-J thanks the financial support of CAPES.
 MA thanks the CNPq (Grants 473002/2013-2 and 308721/2011-0) and FAPERJ (Grant E-26/111.488/2013).
-RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj/PAPDRJ-45/2013.
+RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj: PAPDRJ-45/2013 and Cient.Est-05/2015.
 JIBC acknowledges CNPq for a PQ2 fellowship (process number 308489/2013-6).
 BEM thanks the financial support of CAPES.
 FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014.
-The numerical model of the satellites of Jupiter was developped during a post-doctoral contract funded by the Chinese Academy of Sciences (CAS) and supported by the National Scientific Fund of China (NSFC). \textbf{The authors thank Dr. Nikolay Emelyanov for his comments to improve the paper.}
+The numerical model of the satellites of Jupiter was developped during a post-doctoral contract funded by the Chinese Academy of Sciences (CAS) and supported by the National Scientific Fund of China (NSFC).
+\textbf{The authors thank Dr. Nikolay Emelyanov for his comments to improve the paper.}
 
 
 \bibliographystyle{mn2e}
